WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
112889
[BlackBerry] Main frame fixed divs not positioned correctly
https://bugs.webkit.org/show_bug.cgi?id=112889
Summary
[BlackBerry] Main frame fixed divs not positioned correctly
Arvid Nilsson
Reported
2013-03-21 02:16:43 PDT
This is a regression from
bug #112806
. Now main frame fixed handling is entering the iframe code path =/ PR 283363
Attachments
Patch
(3.76 KB, patch)
2013-03-25 22:00 PDT
,
Arvid Nilsson
no flags
Details
Formatted Diff
Diff
Patch
(3.59 KB, patch)
2013-03-25 22:05 PDT
,
Arvid Nilsson
no flags
Details
Formatted Diff
Diff
Patch
(3.27 KB, patch)
2013-03-26 07:21 PDT
,
Arvid Nilsson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Arvid Nilsson
Comment 1
2013-03-21 02:24:51 PDT
The problem is that GraphicsLayer::isContainerForFixedPositionLayers() gets set to true for the main frame too, which I didn't anticipate. That makes sense though.
Arvid Nilsson
Comment 2
2013-03-21 02:33:14 PDT
I think the best fix is done in ScrollingCoordinatorBlackBerry.cpp which is not upstream yet, so closing this as invalid.
Arvid Nilsson
Comment 3
2013-03-25 21:34:12 PDT
What do you know, the ScrollingCoordinator was upstreamed the other day!
Arvid Nilsson
Comment 4
2013-03-25 22:00:50 PDT
Created
attachment 195000
[details]
Patch
Arvid Nilsson
Comment 5
2013-03-25 22:05:16 PDT
Created
attachment 195001
[details]
Patch
Carlos Garcia Campos
Comment 6
2013-03-26 00:55:39 PDT
Comment on
attachment 195001
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=195001&action=review
> Source/WebCore/page/scrolling/blackberry/ScrollingCoordinatorBlackBerry.cpp:39 > +static GraphicsLayer* scrollLayerForFrame(Frame* frame)
This function is already implemented in the parent class and it's protected, so you can use it here instead of duplicating the code.
> Source/WebCore/page/scrolling/blackberry/ScrollingCoordinatorBlackBerry.cpp:63 > + if (scrollLayerForFrame(m_page->mainFrame()) == layer)
The class in ScrollingCoordinator is scrollLayerForFrameView, so you would need to pass m_page->mainFrame()->view() instead.
Build Bot
Comment 7
2013-03-26 01:37:08 PDT
Comment on
attachment 195001
[details]
Patch
Attachment 195001
[details]
did not pass win-ews (win): Output:
http://webkit-commit-queue.appspot.com/results/17306331
Arvid Nilsson
Comment 8
2013-03-26 07:21:50 PDT
Created
attachment 195082
[details]
Patch
Arvid Nilsson
Comment 9
2013-03-26 07:54:22 PDT
Comment on
attachment 195082
[details]
Patch Thanks cgarcia!
WebKit Review Bot
Comment 10
2013-03-26 08:23:46 PDT
Comment on
attachment 195082
[details]
Patch Clearing flags on attachment: 195082 Committed
r146885
: <
http://trac.webkit.org/changeset/146885
>
WebKit Review Bot
Comment 11
2013-03-26 08:23:51 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug