[BlackBerry] Main frame fixed divs not positioned correctly https://bugs.webkit.org/show_bug.cgi?id=112889

Reviewed by Carlos Garcia Campos.

PR 283363

This was a regression from bug #112806. It caused main frame fixed
handling to enter the iframe/scrollable div code path in LayerRenderer.

Fixed by not setting the container for fixed flag on the main frame,
the LayerRenderer expects this flag to be set only on non-mainframe
containers.

Only manually testable.

* page/scrolling/blackberry/ScrollingCoordinatorBlackBerry.cpp:
(WebCore::scrollLayerForFrame):
(WebCore):
(WebCore::ScrollingCoordinatorBlackBerry::setLayerIsContainerForFixedPositionLayers):
(WebCore::ScrollingCoordinatorBlackBerry::setLayerIsFixedToContainerLayer):


git-svn-id: svn://svn.chromium.org/blink/trunk@146885 bbb929c8-8fbe-4397-9dbb-9b2b20218538